--- a/Webscraping.ipynb
+++ b/Webscraping.ipynb
@@ -4,7 +4,10 @@
   "metadata": {
     "colab": {
       "name": "Webscraping.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPcg3GzvBnYv0q9DJVzot+X",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -12,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/luccidomingues/NBA-Web-Scraping/blob/main/Webscraping.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
