--- a/Webscraping.ipynb
+++ b/Webscraping.ipynb
@@ -6,7 +6,7 @@
       "name": "Webscraping.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPcg3GzvBnYv0q9DJVzot+X",
+      "authorship_tag": "ABX9TyOiy7Ebfl+fal2kqMrLNX8I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,9 @@
       },
       "source": [
         "# The Building Blocks\n",
-        "year = '2019'\n",
+        "# year = '2019'\n",
+        "\n",
+        "year = '2020'\n",
         "str = 'https://www.basketball-reference.com/leagues/NBA_{}_per_game.html'\n",
         "\n",
         "# Combining the URL + year strings together\n",
