--- a/Webscraping.ipynb
+++ b/Webscraping.ipynb
@@ -6,7 +6,7 @@
       "name": "Webscraping.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPHHiXQYQCLfO0ne7WrY268",
+      "authorship_tag": "ABX9TyO/l+wEPKV7BgHgdMFgML9Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
       "source": [
         "Using pandas read_html to Web Scrape Data\n",
         "\n",
-        "In this Jupyter notebook, I will be showing you how to easily web scrape data using pandas read_html() function for your data science project. We will be web scraping NBA player stats data and perform a quick data exploration.\n",
+        "In this notebook, I will be showing you how to easily web scrape data using pandas read_html() function for your data science project. We will be web scraping NBA player stats data and perform a quick data exploration.\n",
         "\n",
         "URL to the webpage \"2018-19 NBA Player Stats: Per Game\"\n",
         "\n",
@@ -46,11 +46,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "rfnzMePNxEP6",
-        "outputId": "689ca9f0-163c-4e3f-a35a-a095393d62e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "689ca9f0-163c-4e3f-a35a-a095393d62e5"
       },
       "source": [
         "# The Building Blocks\n",
@@ -85,11 +85,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "Ob15F0goxQbU",
-        "outputId": "0aa8da8a-51c0-4c5b-a48e-bb70bae22f96",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        }
+        },
+        "outputId": "0aa8da8a-51c0-4c5b-a48e-bb70bae22f96"
       },
       "source": [
         "\n",
@@ -159,11 +159,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZjNieUK9xqrn",
-        "outputId": "44e4d513-6bc2-4feb-f0b5-b632c40bd6d3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 255
-        }
+        },
+        "outputId": "44e4d513-6bc2-4feb-f0b5-b632c40bd6d3"
       },
       "source": [
         "df = pd.read_html(url, header = 0)\n",
@@ -211,11 +211,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "vpwU-M1oxwAN",
-        "outputId": "54211ae9-68c5-4843-e063-d8079c8d50d8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "54211ae9-68c5-4843-e063-d8079c8d50d8"
       },
       "source": [
         "len(df)"
@@ -249,11 +249,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "LH4OD1A4x249",
-        "outputId": "b8d70571-903d-46b4-94f2-a2c107e83dd4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 487
-        }
+        },
+        "outputId": "b8d70571-903d-46b4-94f2-a2c107e83dd4"
       },
       "source": [
         "\n",
@@ -734,11 +734,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "aA4KVyUuyCz8",
-        "outputId": "8676813e-1e21-468d-ae81-d858bfee2363",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 855
-        }
+        },
+        "outputId": "8676813e-1e21-468d-ae81-d858bfee2363"
       },
       "source": [
         "df2019[df2019.Age == 'Age']"
@@ -1714,11 +1714,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "lPZiMQY1yIKo",
-        "outputId": "1d16d7c2-965d-49ad-b87f-a9f86580c48c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "1d16d7c2-965d-49ad-b87f-a9f86580c48c"
       },
       "source": [
         "len(df2019[df2019.Age == 'Age'])"
@@ -1794,11 +1794,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "7FYIYm4cyVUE",
-        "outputId": "5933f536-fdaa-479f-b4ab-9cd4ef86fc38",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 350
-        }
+        },
+        "outputId": "5933f536-fdaa-479f-b4ab-9cd4ef86fc38"
       },
       "source": [
         "sns.distplot(df.PTS, \n",
@@ -1855,11 +1855,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "b9-0KCsDyas9",
-        "outputId": "9eab1e60-aaf0-4611-e83e-d5e4593c6f16",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 350
-        }
+        },
+        "outputId": "9eab1e60-aaf0-4611-e83e-d5e4593c6f16"
       },
       "source": [
         "sns.distplot(df.PTS, \n",
@@ -1916,11 +1916,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "WzuLoHAbyhOe",
-        "outputId": "8b10263f-987a-4061-a7d2-db0cc5116686",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 350
-        }
+        },
+        "outputId": "8b10263f-987a-4061-a7d2-db0cc5116686"
       },
       "source": [
         "sns.distplot(df.PTS,\n",
