--- a/Webscraping_v2.ipynb
+++ b/Webscraping_v2.ipynb
@@ -6,7 +6,7 @@
       "name": "Webscraping_v2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM+Wj3UGOdJKfTD2RHeAV45",
+      "authorship_tag": "ABX9TyNZ45Gip5Hq+XLz59p6CQ9E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
         "id": "ontG14hvxS1-"
       },
       "source": [
-        "Using pandas read_html to Web Scrape Data\n",
+        "Using pandas read_html to Web Scrape Data a\n",
         "\n",
         "In this notebook, I will be showing you how to easily web scrape data using pandas read_html() function for your data science project. We will be web scraping NBA player stats data and perform a quick data exploration.\n",
         "\n",
@@ -62,7 +62,7 @@
         "url = str.format(year)\n",
         "url\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -99,7 +99,7 @@
         "  url = str.format(year)\n",
         "  print(url)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,7 +124,7 @@
         "\n",
         "url_t = 'https://www.basketball-reference.com/leagues/NBA_2019_totals.html'"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,7 +144,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -169,7 +169,7 @@
         "df = pd.read_html(url, header = 0)\n",
         "df"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -219,7 +219,7 @@
       "source": [
         "len(df)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -258,7 +258,7 @@
         "\n",
         "df[0]"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -715,7 +715,7 @@
       "source": [
         "df2019 = df[0]"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -742,7 +742,7 @@
       "source": [
         "df2019[df2019.Age == 'Age']"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1721,7 +1721,7 @@
       "source": [
         "len(df2019[df2019.Age == 'Age'])"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1745,7 +1745,7 @@
       "source": [
         "df = df2019.drop(df2019[df2019.Age == 'Age'].index)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1760,7 +1760,7 @@
       "source": [
         "df.shape"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1793,7 +1793,7 @@
         "\n",
         "# df[df.Tm == 'LAL']"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1915,7 +1915,7 @@
         "\n",
         "df_t"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1957,7 +1957,7 @@
       "source": [
         "df_t[0]"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2421,7 +2421,7 @@
         "\n",
         "df2019_t[df2019_t.Age == 'Age']"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3392,7 +3392,7 @@
         "df_t = df2019_t.drop(df2019_t[df2019_t.Age == 'Age'].index)\n",
         "df_t.shape"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3421,7 +3421,7 @@
       "source": [
         "df_t.describe()"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3644,7 +3644,7 @@
       "source": [
         "df_t[df_t.Player == 'Kemba Walker']"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3769,7 +3769,7 @@
       "source": [
         "import seaborn as sns"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3795,7 +3795,7 @@
         "sns.distplot(df.PTS, \n",
         "             kde=False)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3857,7 +3857,7 @@
         "             kde=False,\n",
         "             hist_kws=dict(edgecolor=\"black\", linewidth=2))"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3919,7 +3919,7 @@
         "             hist_kws=dict(edgecolor=\"black\", linewidth=2),\n",
         "             color='#00BFC4')"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3979,7 +3979,7 @@
         "sns.distplot(df_t.PTS, \n",
         "             kde=False)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4031,7 +4031,7 @@
         "             kde=False,\n",
         "             hist_kws=dict(edgecolor=\"black\", linewidth=2))"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4083,7 +4083,7 @@
         "ax.set(xlabel=\"Points Season\", ylabel=\"Densidade\")\n",
         "ax.set_title(\"Points Total Season 2019\")"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4137,7 +4137,7 @@
         "ax.set(xlabel=\"Season´s Totals\")\n",
         "ax.set_title(\"2019 Season Total Points per Player\")"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4174,7 +4174,7 @@
       "source": [
         "# df_t.info()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4191,7 +4191,7 @@
         "TotalPoints_lessthan1500 = df_t.query(\"PTS <= 1200\")\n",
         "TotalPoints_lessthan1500.describe()"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4286,7 +4286,7 @@
       "source": [
         "TotalPoints_lessthan1500.shape"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4317,7 +4317,7 @@
         "ax.set(xlabel=\"Season´s Totals\")\n",
         "ax.set_title(\"2019 Season Total Points\")"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4361,7 +4361,7 @@
         "ax.set(xlabel=\"Nota média\", ylabel=\"Frequência\")\n",
         "ax.set_title(\"2019 Season Total Points\")"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4413,7 +4413,7 @@
         "ax.set(xlabel=\"\", ylabel=\"Densidade\")\n",
         "ax.set_title(\"2019 Season Total Points\")"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4463,7 +4463,7 @@
       "source": [
         "TotalPoints_lessthan1500.head()"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4725,7 +4725,7 @@
         "\n",
         "# TotalPoints_lessthan1500.query('`2P`  15')"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4775,7 +4775,7 @@
         "# checking if there is 2P null\n",
         "TotalPoints_lessthan1500[\"2P\"].isnull().sum()"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4804,7 +4804,7 @@
       "source": [
         "# TotalPoints_lessthan1500.query(\"[FG%] == 0\")"
       ],
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -4834,7 +4834,7 @@
         "ax.set(xlabel=\"\", ylabel=\"% cestas\")\n",
         "ax.set_title(\"2019 Season Total Points\")\n"
       ],
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4885,7 +4885,7 @@
         "\n",
         "TotalPoints_lessthan1500.dtypes"
       ],
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4955,7 +4955,7 @@
       "source": [
         "TotalPoints_lessthan1500[\"2P\"].quantile(0.8)"
       ],
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4984,7 +4984,7 @@
       "source": [
         ""
       ],
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -5006,7 +5006,7 @@
         "\n",
         "# TotalPoints_lessthan1500_Out0"
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5024,7 +5024,7 @@
         "ax.set(xlabel=\"Nota média\", ylabel=\"Frequência\")\n",
         "ax.set_title(\"Média de votos em filmes no TMDB 5000\")"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
