--- a/Webscraping_v2.ipynb
+++ b/Webscraping_v2.ipynb
@@ -6,7 +6,7 @@
       "name": "Webscraping_v2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNZ45Gip5Hq+XLz59p6CQ9E",
+      "authorship_tag": "ABX9TyMKaDkxsqbgVQH5fImOOT72",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,8 +31,8 @@
         "id": "ontG14hvxS1-"
       },
       "source": [
-        "Using pandas read_html to Web Scrape Data a\n",
-        "\n",
+        "Using pandas read_html to Web Scrape Data\n",
+        " \n",
         "In this notebook, I will be showing you how to easily web scrape data using pandas read_html() function for your data science project. We will be web scraping NBA player stats data and perform a quick data exploration.\n",
         "\n",
         "URL to the webpage \"2018-19 NBA Player Stats: Per Game\"\n",
