--- a/Webscraping_v2.ipynb
+++ b/Webscraping_v2.ipynb
@@ -6,7 +6,7 @@
       "name": "Webscraping_v2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM+Wj3UGOdJKfTD2RHeAV45",
+      "authorship_tag": "ABX9TyNMKpPP7tFoToJABOULZQ0S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
         "id": "ontG14hvxS1-"
       },
       "source": [
-        "Using pandas read_html to Web Scrape Data\n",
+        "Using pandas read_html to Web Scrape\n",
         "\n",
         "In this notebook, I will be showing you how to easily web scrape data using pandas read_html() function for your data science project. We will be web scraping NBA player stats data and perform a quick data exploration.\n",
         "\n",
